removed: remove unneccessary xml
